first commit correction 6

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,39 @@
 # Alliance Shipping Environment Variables
 # Copy this file to .env.local and fill in your values
 
+# ========================================
+# REQUIRED - Application will not work without these
+# ========================================
+
+# Clerk Authentication (REQUIRED)
+# Get your keys from: https://dashboard.clerk.com/last-active?path=api-keys
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_your_key_here
+CLERK_SECRET_KEY=sk_test_your_secret_key_here
+
+# Clerk URLs
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
+
+# Database - Neon PostgreSQL (REQUIRED)
+# Get your connection string from: https://console.neon.tech
+DATABASE_URL=postgresql://user:password@host/database?sslmode=require
+
+# ========================================
+# OPTIONAL - Application works without these
+# ========================================
+
+# Resend Email (Optional - for email notifications)
+# RESEND_API_KEY=re_your_api_key_here
+# EMAIL_FROM=noreply@allianceshipping.com
+
+# App Configuration
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
 # Site Configuration
 NEXT_PUBLIC_SITE_URL=https://allianceshipping.com
 NEXT_PUBLIC_SITE_NAME=Alliance Shipping
-
-# Contact Form (Optional - for email integration)
-# SMTP_HOST=smtp.gmail.com
-# SMTP_PORT=587
-# SMTP_USER=your-email@gmail.com
-# SMTP_PASS=your-app-password
-# CONTACT_EMAIL=info@allianceshipping.com
-
-# Analytics (Optional)
-# NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
-# NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
-
-# Maps API (Optional - for embedded maps)
-# NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your-api-key-here
 
 # Social Media Links
 NEXT_PUBLIC_FACEBOOK_URL=https://facebook.com/allianceshipping
@@ -29,3 +45,10 @@ NEXT_PUBLIC_LINKEDIN_URL=https://linkedin.com/company/allianceshipping
 NEXT_PUBLIC_PHONE=+1 (305) 555-0100
 NEXT_PUBLIC_EMAIL=info@allianceshipping.com
 NEXT_PUBLIC_WHATSAPP=+15055550100
+
+# Analytics (Optional)
+# NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
+# NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
+
+# Maps API (Optional)
+# NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your-api-key-here
